app/[locale]/(platform)/_components/Projects/ProjectsCard/ProjectsCardComponent.scss
@use "./../../../styles/mixins/mixins";

.projectsCards__Card {
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
  color: #fff;
  height: 100%;
  @include mixins.widthProjectCard(100%);
  @include mixins.paddingProjectsCard(0);

  .projectsCards_ImageWrapper {
    img {
      top: 0;
      height: 32rem;
      border-radius: 15px;
      transition: transform 0.6s;
    }
  }

  .inner {
    transition: transform 0.6s;
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 100%;

    .projectsCards__FirstSheet {
      position: absolute;
      display: flex;
      align-items: center;
      justify-content: space-between;
      background-color: rgba(20, 66, 114, 0.7);
      backdrop-filter: blur(3px);
      border-radius: 15px 15px 0 0;
      top: 0;

      height: 15%;
      width: 100%;

      .projectCards__SecondName {
        opacity: 0;
        margin-left: 1rem;
      }

      Button {
        margin-right: 1rem;
        padding: 0.5rem;
        height: 2.5rem;
        background-color: transparent;
        border: 1px #fff solid;

        &:first-child {
          font-size: x-large;
        }
      }
    }

    .projectsCards__SecondSheet {
      position: absolute;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      background-color: rgba(20, 66, 114, 0.7);
      backdrop-filter: blur(3px);
      height: 25%;
      width: 100%;
      overflow: hidden;
      .projectsCards__TextContainer {
        display: flex;
        flex-direction: column;
        width: 100%;
        p {
          padding: 0 1rem;
          opacity: 0;
          height: 0;
        }
      }

      .projectsCards__Links {
        display: flex;
        flex-flow: row nowrap;
        justify-content: center;
        align-items: center;
        gap: 1rem;
        margin-top: 0.5rem;
        width: 100%;

        a {
          width: 15%;
          font-size: 2.5rem;
          transition: 0.3s ease-out;

          &:nth-child(2) {
            border: #fff 1px solid;
            border-radius: 10px;
          }

          &:hover {
            transform: scale(1.2);
          }
        }
      }

      .projectsCards__Name {
        @include mixins.fontSizeTitleProjectCard(1.5rem);
        text-align: center;
      }

      .projectsCards__TechImg {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
        align-items: center;
        width: 100%;
        bottom: 1rem;
        top: 0;

        img {
          height: 2rem;
          @include mixins.projectTechImgWidth(2.5rem);
        }
      }
    }

    .projectsCards__ThirdSheet {
      position: absolute;
      display: flex;
      background-color: rgba(20, 66, 114, 0.7);
      backdrop-filter: blur(3px);
      border-radius: 0 0 15px 15px;
      bottom: 0;
      height: 15%;
      width: 100%;
    }
  }
}

.projectsCards__Card.expanded {
  .projectCards__SecondName {
    animation: fadeIn 0.5s 1.5s forwards;
  }

  .projectsCards__SecondSheet {
    animation: expandHeight 0.5s 1s forwards;

    .projectsCards__TextContainer {
      p {
        animation: fadeIn2 1s 1.5s forwards;
      }
    }

    .projectsCards__NameContainer {
      animation: fadeOut 0.3s 0.3s forwards;
    }

    .projectsCards__Links {
      a {
        &:nth-child(1) {
          animation: fadeOut 0.3s 0.5s forwards;
        }
        &:nth-child(2) {
          animation: fadeOut 0.3s 0.7s forwards;
        }
      }
    }
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
    visibility: hidden;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeIn2 {
  from {
    opacity: 0;
    height: 0;
  }
  to {
    height: 100%;
    opacity: 1;
  }
}

@keyframes expandHeight {
  from {
    height: 25%;
  }
  to {
    height: 100%;
    border-radius: 15px;
  }
}

